--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@
 html,
 body {
   font-family: "Poppins", sans-serif;
-  height: 100%;
+  /* height: 100%; */
   width: 100%;
   padding: 0;
   margin: 0;
@@ -15,7 +15,7 @@ body {
 .container {
   max-width: 100%;
   width: 100%;
-  height: 100vh;
+  /* height: 100vh; */
   margin: 0;
   padding: 0;
   overflow-x: hidden;
