--- a/css/home.css
+++ b/css/home.css
@@ -57,8 +57,11 @@
 #left-menu {
   position: relative;
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
   align-items: center;
+  height: 100%;
+  flex-grow: 1;
 }
 
 .card {
@@ -69,6 +72,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
+  transition: 0.8s;
+}
+.card:hover {
+  transition: 0.8s;
+  background-color: white;
 }
 .card .face {
   position: relative;
@@ -76,8 +85,13 @@
   justify-content: center;
   align-items: center;
   height: 200px;
-  width: 300px;
+  width: 150px;
   transition: 0.5s;
+}
+.card:hover .face {
+  height: 250px;
+  width: 180px;
+  cursor: pointer;
 }
 .card .face .content {
   opacity: 0.4;
@@ -88,11 +102,19 @@
 }
 .card .face .content img {
   position: relative;
-  left: 35%;
+
   width: 30%;
   filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(52deg)
     brightness(104%) contrast(102%);
 }
+
+.card:hover .face .content img {
+  filter: none;
+}
 .card .face .content h3 {
   color: #fff;
+  font-size: 1.5em;
+}
+.card:hover .face .content h3 {
+  color: black;
 }
