--- a/index.css
+++ b/index.css
@@ -7,7 +7,8 @@ body {
   width: 100%;
   padding: 0;
   margin: 0;
-  overflow: hidden;
+  /* overflow: hidden; */
+  overflow-x: hidden;
 }
 .nav-wrapper {
   overflow-y: hidden;
@@ -15,7 +16,7 @@ body {
 .container {
   max-width: 100%;
   width: 100%;
-  /* height: 100vh; */
+
   margin: 0;
   padding: 0;
   overflow-x: hidden;
