--- a/css/home.css
+++ b/css/home.css
@@ -25,19 +25,19 @@
   height: 500px;
 }
 #p5 {
-  bottom: 0%;
+  bottom: 0;
   transform: scaleX(-1);
   right: 5%;
   z-index: 1;
 }
 #p4 {
-  bottom: 0%;
+  bottom: 0;
   transform: scaleX(-1);
   left: 60%;
 }
 
 #p3 {
-  bottom: 0%;
+  bottom: 0;
   right: -5%;
   z-index: 1;
 }
