--- a/index.css
+++ b/index.css
@@ -9,6 +9,7 @@ body {
   margin: 0;
   /* overflow: hidden; */
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 .nav-wrapper {
   overflow-y: hidden;
@@ -16,18 +17,29 @@ body {
 .container {
   max-width: 100%;
   width: 100%;
-
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
+  overflow: hidden;
+  visibility: hidden;
+}
+#body-content {
+  visibility: hidden;
 }
 
 /* Style for match data request */
 
 .mcard-container {
-  margin: 20px;
+  margin: 10px;
   padding: 20px 10px;
-  max-width: 100%;
+  color: white;
+  background-color: rgba(255, 255, 255, 0);
+  border: white 2px solid;
+  border-radius: 20px;
+  transition: 0.5s;
+}
+.mcard-container:hover {
+  cursor: pointer;
+  background-color: rgba(128, 0, 128, 0.3);
 }
 .mcard {
   position: relative;
@@ -38,6 +50,7 @@ body {
 }
 .mtimeDate {
   text-align: end;
+  border-right: white 2px solid;
 }
 .mtimeClock {
   text-align: start;
@@ -60,7 +73,7 @@ body {
 .homeTeam h3 {
   margin: 0;
   padding: 10px;
-  background-color: #590995;
+
   font-size: 25px;
   text-align: end;
 }
@@ -75,7 +88,7 @@ body {
 .awayTeam h3 {
   margin: 0;
   padding: 10px;
-  background-color: #590995;
+
   font-size: 25px;
   text-align: start;
 }
