--- a/index.css
+++ b/index.css
@@ -5,9 +5,10 @@ body {
   font-family: "Poppins", sans-serif;
   /* height: 100%; */
   width: 100%;
+
   padding: 0;
   margin: 0;
-  /* overflow: hidden; */
+
   overflow-x: hidden;
   scroll-behavior: smooth;
 }
@@ -20,7 +21,6 @@ body {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  visibility: hidden;
 }
 #body-content {
   visibility: hidden;
@@ -94,4 +94,33 @@ body {
 }
 #small-detail {
   text-align: center;
+}
+
+.scard-container {
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  width: 70%;
+  color: white;
+  left: 15%;
+  /* border: white 2px solid;
+  border-radius: 20px; */
+  margin: 0px 0px 50px;
+}
+.scard-container table thead th {
+  color: white;
+}
+.scard-container table tbody tr th {
+  color: white;
+}
+td,
+th {
+  color: white;
+}
+#tname {
+  width: 50%;
+}
+
+.scard-container h3 {
+  border-bottom: white 2px solid;
 }
