--- a/index.css
+++ b/index.css
@@ -22,6 +22,10 @@ body {
   padding: 0;
   overflow: hidden;
 }
+nav .brand-logo {
+  font-size: 2em;
+  padding: 5px 10px;
+}
 
 /* Style for match data request */
 
@@ -120,4 +124,90 @@ th {
 
 .scard-container h3 {
   border-bottom: white 2px solid;
+}
+
+@media (max-width: 768px) {
+  #team-card {
+    margin: 10px;
+  }
+  #team-card .header {
+    font-size: 2.35em;
+  }
+  #team-card .horizontal .card-image img {
+    width: 100%;
+  }
+}
+
+@media (max-width: 425px) {
+  .homeTeam h3 {
+    font-size: 15px;
+  }
+  .awayTeam h3 {
+    font-size: 15px;
+  }
+  .versusBlock h3 {
+    font-size: 15px;
+  }
+ 
+  .scard-container {
+    left: 10%;
+  }
+
+  #tname {
+    width: 20%;
+    font-size: 14px;
+  }
+
+  td, tr {
+    font-size: 12px;
+  }
+  #team-card {
+    margin: 10px;
+  }
+  #team-card .header {
+    font-size: 2em;
+  }
+  #team-card .horizontal .card-image img {
+    width: 100%;
+  }
+
+  .card-content a p {
+    font-size: 12px;
+    color: white;
+  }
+
+  nav .brand-logo {
+    font-size: 1.5em;
+    
+  }
+
+}
+
+@media (max-width: 375px) {
+  .homeTeam h3 {
+    font-size: 12px;
+  }
+  .awayTeam h3 {
+    font-size: 12px;
+  }
+  .versusBlock h3 {
+    font-size: 12px;
+  }
+  .scard-container {
+    left: 10%;
+  }
+
+  #tname {
+    width: 20%;
+    font-size: 10px;
+  }
+
+  td, tr {
+    font-size: 10px;
+  }
+  nav .brand-logo {
+    font-size: 1.2em;
+    
+  }
+
 }
