--- a/teamDetail.css
+++ b/teamDetail.css
@@ -3,6 +3,7 @@
   max-width: 100%;
   height: 100vh;
   color: white;
+  overflow: hidden;
 }
 .t-container {
   width: 100%;
@@ -12,3 +13,25 @@
   flex: wrap;
   justify-content: space-evenly;
 }
+
+.team-logo {
+  width: 20%;
+}
+
+@media (max-width: 768px) {
+  .team-logo {
+    width: 20%;
+  }
+  .team-content h2 {
+    font-size: 2em;
+  }
+}
+@media (max-width: 425px) {
+  .team-content h2 {
+    font-size: 1.5em;
+  }
+  .team-content p {
+    font-size: 12px;
+  }
+}
+
